Fixed the build process